--- a/build.gradle
+++ b/build.gradle
@@ -30,29 +30,25 @@ dependencyManagement {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter'
 
-    // DB
+    //DB
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     runtimeOnly 'org.postgresql:postgresql'
-
-    // Lombok
+    //lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    // API Documentation
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
-
-    // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.batch:spring-batch-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    // MSA / Spring Cloud
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    implementation 'org.springframework.cloud:spring-cloud-starter-config'
-    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+    //MSA
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'//discovery에 살아있는지 여부에 대한 서버 정보 전달.
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'//eureka 연결 라이브러리
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'//config 정보 연결.
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'//bootstrap.yaml을 읽어와서 먼저 적용하기 위한 라이브러리
 
     //jwt
     implementation 'org.springframework.boot:spring-boot-starter-security'
